tests/declaration_files_incremental_haste/declaration_files_incremental_haste.exp
======Start off with the .js files but without the .flow file======
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js:2:26
   2| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js:2:26
   2| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
[incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js:6:26
   6| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js:2:26
   2| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js:2:26
   2| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
[incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js:6:26
   6| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors


======Start off with the .js files and the .flow file======
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js:2:26
   2| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js:2:26
   2| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
[incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js:6:26
   6| module.exports.fun = (): Implementation => new Implementation;
                               ^^^^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors


======Start off without the .js files and with the .flow file======
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors
Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:6:2

Cannot cast `min.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:6:2
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^

References:
   external/_d3/min.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:6:13
   6| (min.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `corge.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   foo/bar/nested_test.js:7:15
   7| (corge.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                    ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to boolean because `Declaration` [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js.flow:2:32
   2| declare export function fun(): Declaration;
                                     ^^^^^^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): boolean); // Error: Either Implementation ~> boolean or Declaration ~> boolean
                       ^^^^^^^ [2]



Found 3 errors
